--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "nodemy",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
+    "handlebars": "^4.7.6",
+    "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
+    "middleware": "^1.0.0",
     "mongoose": "^5.10.3",
+    "mongoose-slug-generator": "^1.0.4",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "start": "^5.1.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -23,5 +28,6 @@
     "start": "nodemon server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
